--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.71.4",
     "react-native-auto-carousel": "^1.0.8",
     "react-native-auto-scrolling": "^3.0.2",
+    "react-native-eject": "^0.2.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-charts": "^1.2.42",
     "react-native-image-swiper": "^0.0.8",
