--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
@@ -21,6 +23,7 @@
     "react-native": "0.71.4",
     "react-native-auto-carousel": "^1.0.8",
     "react-native-auto-scrolling": "^3.0.2",
+    "react-native-drawer-layout": "^3.2.0",
     "react-native-eject": "^0.2.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-charts": "^1.2.42",
@@ -36,6 +39,7 @@
     "react-native-reanimated-carousel": "^3.3.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-side-drawer": "^2.1.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.8.0",
     "react-native-swiper": "^1.6.0-rc.3",
