--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,7 +95,7 @@ android {
 
     namespace "com.usdtscanexplorer"
     defaultConfig {
-        applicationId "com.usdtscanexplorer"
+        applicationId "com.justcode.usdtscanexplorer"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
