--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-swiper-flatlist": "^3.0.18",
     "react-native-table-component": "^1.2.2",
     "react-native-view-slider": "^1.1.1",
+    "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
