--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-side-drawer": "^2.1.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.8.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-swiper-flatlist": "^3.0.18",
